[package]
name = "bbc-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = "0.11.6"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { vesion = "1.0.130", features = ["derive"] }
# tokio = "1.13.0"
tokio = { version = "1.13.0", features = ["full"] }
